# Rusic

./: .gitignore  .rubocop.yml  Cargo.toml  Gemfile  LICENSE  README.md  jungru.gemspec  rusy.md
examples/example0/: Gemfile  song copy.rb  song.rb
lib/: jungru.rb
lib/jungru/: support.rb  version.rb
sig/: jungru.rbs
src/: instrument.rs  instrument_dto.rs  lib.rs  meta.rs  oscillator.rs  piece.rs  section.rs  support.rs  time.rs  track.rs  transfer.rs  util.rs
src/inner/: instrument.rs  instrument_dto.rs  jungru.rs  meta.rs  mod.rs  oscillator.rs  piece.rs  section.rs  track.rs  transfer.rs
src/instrument/: mod.rs  transfer.rs
src/meta/: mod.rs
src/piece/: mod.rs
src/section/: mod.rs
src/support/: mod.rs
src/track/: mod.rs
test/: test_helper.rb  test_jungru.rb
