[package]
name = "jungru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jungru"
crate-type = ["cdylib"]

[dependencies]
rutie = { version = "0.8.3" }
lazy_static = { version = "1.4.0" }
itertools = { version = "0.10.3" }
hound = { version = "3.4.0" }
num = { version = "0.4.0" }
